Revision history for Perl extension Bread::Board

0.15
    * Bread::Board::Service
      - removed the MooseX::Param dependency
        and implemented it internally so that
        we have more control

    * Bread::Board::Types
      - the Bread::Board::Service::Dependencies
        type now can also coerce ArrayRef[Str]
        and HashRef[Str] types correctly (doy)

    !! NEW EXPERIMENTAL FEATURE !!

    * Bread::Board
      - added the typemap and infer keyword
        to help in the mapping of types and
        construction of inferred services
        - added tests for this

    * Bread::Board::Container
      - added the typemap feature and added
        the ->resolve( type => $type ) call
        - added tests for this

    * Bread::Board::Service::Inferred
      - added this and tests for it

0.14 Tues. Aug. 24, 2010
    * Bread::Board::Container
      - added the ->resolve method to replace
        the ->fetch( $service )->get pattern
        that annoys mst so much.
        - adjusted all the tests to account
          for this change.
        - adjusted all the docs to now use
          this approach instead

    - now using Try::Tiny for all exception
      handling (except the Deferred service)

    * Bread::Board::Service::WithDependencies
      - if you want to depend on a parameterized
        service, now you can and it will return
        a Bread::Board::Service::Deferred::Thunk
        that you can call ->inflate on and pass
        in the parameters for it.
        - added tests for this

    * Bread::Board::Service::Deferred::Thunk
      - added this + tests for it

0.13 Fri. April 23, 2010
    * Bread::Board
      - making the include keyword handle
        compilation errors better (doy)
          - added test for this

    * Bread::Board::Container
      Bread::Board::Container::Parameterized
      - it is now possible to store parameterized
        containers within regular containers and
        have them behave properly